syntax = "proto3";

import "google/protobuf/wrappers.proto"; // for nullable types

option csharp_namespace = "Maklak.Service";

package maklak;

// The greeting service definition.
service Maklak {
  // Sends a greeting
  rpc SayHello (HelloRequestExt) returns (HelloReplyExt);

  rpc AuthenticateUser (AuthenticateRequest) returns (AuthenticateResponse);
  rpc RegisterUser (RegisterRequest) returns (RegisterResponse);

  rpc Search (SearchRequest) returns (SearchResponse);

  rpc AddItem (ItemRequest) returns (ItemResponse);

  rpc EditItem (ItemRequest) returns (ItemResponse);

  rpc DeleteItem (ItemRequest) returns (ItemResponse);
  
}

// The request message containing the user's name.
message HelloRequestExt {
  string name = 1;
}

// The response message containing the greetings.
message HelloReplyExt {
  string message = 1;
}

message AuthenticateRequest{
    string Login = 1;
    string Password = 2;
}
message AuthenticateResponse{
    bool IsAuthenticated = 1;
}

message RegisterRequest{
    string Login = 1;
    string Password = 2;
}
message RegisterResponse{
    bool IsAuthenticated = 1;
}

message SearchRequest{
    //message InputData{
        //map<string, string> values = 1;
        //string InputType = 1;
        //string InputValue = 2;
    //}

    //repeated InputData SerchInput = 1;
    google.protobuf.Int32Value ItemId = 1;
    string InputType = 2;
    string InputValue = 3;
}

message SearchResponse{
    message ItemsData{
        int32 ItemId = 1;  
        google.protobuf.Int32Value ParentId = 2; //nullable type
        string ItemValue = 3;        
    }

    repeated ItemsData Items = 1;
}

message ItemRequest{
    
        google.protobuf.Int32Value ItemId = 1;
        string ItemType = 2;  
        string ItemValue = 3;        
    
}

message ItemResponse{
    
        int32 Result = 1;              
    
}
